--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -3,7 +3,7 @@
 on:
   workflow_dispatch:  # 手动触发工作流
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 时间 00:00 自动运行
+    - cron: '0 16 * * *'  # 每天 UTC+8 时间 00:00 自动运行
   push:
     branches:
       - master
